--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- SECTION CONTACT DÉPLACÉE ET REPENSÉE -->
         <section id="contact" class="fade-in">
             <div class="contact-links">
-                <a href="mailto:contact@marcgehring.fr" class="button">Email</a>
+                <a href="marcwgehring@gmail.com" class="button">Email</a>
                 <a href="https://www.linkedin.com/in/marc-gehring-6691436b" target="_blank" rel="noopener noreferrer" class="button">LinkedIn</a>
                 <a href="https://x.com/marcgehring" target="_blank" rel="noopener noreferrer" class="button">X (Twitter)</a>
             </div>
