--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         </main>
 
         <footer>
-            <p>&copy; 2025 Marc Gehring - Tous droits réservés.</p>
+            <p>&copy; 2025 Marc Gehring - Tous droits réservés - <a href="https://promptsmg-663481645724.us-west1.run.app/" target="_blank" rel="noopener noreferrer">PromptsMG</a> - <a href="https://marcoco27.github.io/voyage-malaisie/" target="_blank" rel="noopener noreferrer">App Voyage Malaisie & Singapour</a> - <a href="https://x.com/ArtMomentum_" target="_blank" rel="noopener noreferrer">ArtMomentum_ Bot</a></p>
         </footer>
     </div>
 
