--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             <h1>Marc Gehring</h1>
             <p class="tagline">Journaliste & Explorateur Digital</p>
 
-            <!-- NOUVELLE BARRE DE CONTACT INTÉGRÉE -->
             <div class="header-contact-links">
-                <a href="mailto:marcwgehring@gmail.com">
-                    <i class="fa-solid fa-envelope"></i>
-                    <span>Email</span>
+                <!-- MODIFICATION ICI : Ajout de id et data-email -->
+                <a href="mailto:marcwgehring@gmail.com" id="email-link" data-email="marcwgehring@gmail.com" title="Cliquer pour copier l'adresse email">
+                    <i id="email-icon" class="fa-solid fa-envelope"></i>
+                    <span id="email-text">Email</span>
                 </a>
                 <a href="https://www.linkedin.com/in/marc-gehring-6691436b" target="_blank" rel="noopener noreferrer">
                     <i class="fa-brands fa-linkedin"></i>
@@ -46,6 +46,7 @@
         </nav>
 
         <main>
+            <!-- Le reste du contenu reste inchangé -->
             <section id="a-propos" class="fade-in">
                 <h2>À propos ✍️</h2>
                 <p>
@@ -95,7 +96,6 @@
                 </div>
             </section>
 
-            <!-- Le reste du contenu reste inchangé -->
             <section id="experience" class="fade-in">
                 <h2>Expérience Professionnelle 💼</h2>
                 <div class="card-list">
@@ -181,7 +181,7 @@
         </main>
 
         <footer>
-            <p>&copy; 2025 Marc Gehring - Tous droits réservés - <a href="https://promptsmg-663481645724.us-west1.run.app/" target="_blank" rel="noopener noreferrer">PromptsMG</a> - <a href="https://marcoco27.github.io/voyage-malaisie/" target="_blank" rel="noopener noreferrer">App Voyage Malaisie & Singapour</a> - <a href="https://x.com/ArtMomentum_" target="_blank" rel="noopener noreferrer">ArtMomentum_ Bot</a></p>
+                <p>&copy; 2025 Marc Gehring - Tous droits réservés - <a href="https://promptsmg-663481645724.us-west1.run.app/" target="_blank" rel="noopener noreferrer">PromptsMG</a> - <a href="https://marcoco27.github.io/voyage-malaisie/" target="_blank" rel="noopener noreferrer">Voyage Malaisie & Singapour</a> - <a href="https://x.com/ArtMomentum_" target="_blank" rel="noopener noreferrer">ArtMomentum_</a></p>
         </footer>
     </div>
 
